--- a/packages/engine-react/package.json
+++ b/packages/engine-react/package.json
@@ -4,20 +4,17 @@
   "private": true,
   "dependencies": {
     "@tupynambagame/engine-core": "*",
-    "@tupynambagame/engine-assets": "*"
-  },
-  "peerDependencies": {
+    "@tupynambagame/engine-assets": "*",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
     "@react-three/postprocessing": "^3.0.4",
     "@react-three/rapier": "^2.2.0",
+    "@xstate/react": "^6.0.0",
     "gsap": "^3.13.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "three": "^0.181.1",
-    "tone": "^15.1.22",
-    "xstate": "^5.24.0",
-    "@xstate/react": "^6.0.0"
+    "tone": "^15.1.22"
   },
   "devDependencies": {
     "typescript": "~5.8.3",
