--- a/packages/engine-server/package.json
+++ b/packages/engine-server/package.json
@@ -17,14 +17,20 @@
         "@fastify/one-line-logger": "^2.0.2",
         "@fastify/session": "^11.1.1",
         "@tupynambagame/engine-core": "*",
+        "@tupynambagame/engine-assets": "*",
         "@types/bcrypt": "^6.0.0",
         "bcrypt": "^6.0.0",
+        "cloudinary": "^2.8.0",
         "fastify": "^5.6.2",
         "fastify-plugin": "^4.5.1",
+        "glob": "^12.0.0",
+        "md5-file": "^5.0.0",
         "mongoose": "^8.19.4",
         "socket.io": "^4.7.5"
     },
     "devDependencies": {
+        "@types/glob": "^8.1.0",
+        "@types/md5-file": "^4.0.2",
         "@types/node": "^20.12.12",
         "ts-node-dev": "^2.0.0",
         "typescript": "~5.8.3"
