--- a/packages/engine-react/package.json
+++ b/packages/engine-react/package.json
@@ -14,7 +14,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "three": "^0.181.1",
-    "tone": "^15.1.22"
+    "tone": "^15.1.22",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "typescript": "~5.8.3",
